src/k8s/apps/hack4goodsgf.com/staging/middleware-noindex.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hack4goodsgf-noindex
spec:
  headers:
    customResponseHeaders:
      X-Robots-Tag: noindex, nofollow, noarchive, nosnippet
