src/k8s/apps/hack4goodsgf.com/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hack4goodsgf-com-staging
  labels:
    app.kubernetes.io/name: hack4goodsgf
    app.kubernetes.io/instance: staging
