src/k8s/apps/hack4goodsgf.com/staging/ingress-xmlrpc-deny.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hack4goodsgf-xmlrpc-deny
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: hack4goodsgf-com-staging-hack4goodsgf-xmlrpc-deny@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - staging.hack4goodsgf.com
      secretName: hack4goodsgf-tls
  rules:
    - host: staging.hack4goodsgf.com
      http:
        paths:
          - path: /xmlrpc.php
            pathType: Prefix
            backend:
              service:
                name: hack4goodsgf
                port:
                  number: 80
